# ai-experiments-collection

./: .gitignore  README.md
CrewAI_Concepts/: .env.example  .gitignore  README.md  main.py  requirements.txt
DynamicAgent-Orchestration/: .env.example  .gitignore  README.md  pyproject.toml
DynamicAgent-Orchestration/docs/: ARCHITECTURE.md
DynamicAgent-Orchestration/examples/: custom_agent.py  run_basic.py
DynamicAgent-Orchestration/src/orchestrator/: __init__.py  __main__.py  logging_setup.py
DynamicAgent-Orchestration/src/orchestrator/agents/: __init__.py  base.py  planner.py  registry.py  specialists.py  synthesizer.py
DynamicAgent-Orchestration/src/orchestrator/config/: __init__.py  settings.py
DynamicAgent-Orchestration/src/orchestrator/core/: __init__.py  builder.py  orchestrator.py
DynamicAgent-Orchestration/src/orchestrator/llm/: __init__.py  anthropic_client.py  base.py  factory.py  mock_client.py  openai_client.py
DynamicAgent-Orchestration/tests/: conftest.py  test_agents.py  test_orchestrator.py  test_settings.py
MicrosoftAgentFramework-Concepts/: .env.example  .gitignore  INTERVIEW.md  README.md  requirements.txt  run_all.py
MicrosoftAgentFramework-Concepts/examples/: 01_basic_agent.py  02_streaming.py  03_function_tools.py  (+15 more)
a2a-agent-pipeline/: .env copy  README.md  requirements.txt
langgraph-Concepts/: .env.example  INTERVIEW_CONCEPTS.md  README.md  requirements.txt  run_all.py
langraph-vs-crewai-vs-maf/: .env.example  README.md  crewai_pipeline.py  langgraph_pipeline.py  maf_pipeline.py  requirements.txt  run_all.py  shared.py
(+34 files in other folders)
